--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx api/index.ts",
-    "build": "vite build && esbuild api/index.ts --platform=node --bundle --format=esm --outdir=dist",
+    "build": "vite build && esbuild api/index.ts --platform=node --bundle --format=esm --outfile=dist/index.js --external:@babel/preset-typescript --external:../pkg --external:../lightningcss.*.node",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -104,4 +104,3 @@
     "bufferutil": "^4.0.8"
   }
 }
-
